--- a/horizontalexample.html
+++ b/horizontalexample.html
@@ -6,10 +6,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Horizontal examples - Sly</title>
 	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" href="../css/normalize.css">
+	<link rel="stylesheet" href="css/testing/normalize.css">
 	<link rel="stylesheet" href="../css/font-awesome.css">
 	<link rel="stylesheet" href="../css/ospb.css">
-	<link rel="stylesheet" href="css/horizontal.css">
+	<link rel="stylesheet" href="css/testing/horizontal.css">
 	<script src="../js/vendor/modernizr.js"></script>
 </head>
 <body>
