--- a/horizontal.html
+++ b/horizontal.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="../css/font-awesome.css">
 	<link rel="stylesheet" href="../css/ospb.css">
 	<link rel="stylesheet" href="css/testing/horizontal.css">
-	<script src="../js/vendor/modernizr.js"></script>
+	<script src="../js/modernizr.js"></script>
 </head>
 <body>
 	<header class="pagespan">
