fixing css links and getting rid of the font we don't use css

--- a/horizontal.html
+++ b/horizontal.html
@@ -7,10 +7,9 @@
 	<title>Horizontal examples - Sly</title>
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="css/testing/normalize.css">
-	<link rel="stylesheet" href="../css/font-awesome.css">
-	<link rel="stylesheet" href="../css/ospb.css">
+	<link rel="stylesheet" href="/css/ospb.css">
 	<link rel="stylesheet" href="css/testing/horizontal.css">
-	<script src="../js/modernizr.js"></script>
+	<script src="/js/modernizr.js"></script>
 </head>
 <body>
 	<header class="pagespan">
