fixing the name of /js/modernizr to /modernizer

--- a/horizontal.html
+++ b/horizontal.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="css/testing/normalize.css">
 	<link rel="stylesheet" href="/css/ospb.css">
 	<link rel="stylesheet" href="css/testing/horizontal.css">
-	<script src="/js/modernizr.js"></script>
+	<script src="/js/modernizer.js"></script>
 </head>
 <body>
 	<header class="pagespan">
