--- a/horizontal.html
+++ b/horizontal.html
@@ -7,9 +7,9 @@
 	<title>Horizontal examples - Sly</title>
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="css/testing/normalize.css">
-	<link rel="stylesheet" href="/css/ospb.css">
+	<link rel="stylesheet" href="/css/testing/ospb.css">
 	<link rel="stylesheet" href="css/testing/horizontal.css">
-	<script src="/js/modernizer.js"></script>
+	<script src="/js/testing/modernizer.js"></script>
 </head>
 <body>
 	<header class="pagespan">
