--- a/horizontal.html
+++ b/horizontal.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="css/testing/normalize.css">
 	<link rel="stylesheet" href="css/testing/ospb.css">
 	<link rel="stylesheet" href="css/testing/horizontal.css">
-	<script src="js/testing/modernizer.js"></script>
+	<script src="js/testing/modernizr.js"></script>
 </head>
 <body>
 	<header class="pagespan">
