editing linkage to the scripts

--- a/horizontal.html
+++ b/horizontal.html
@@ -89,10 +89,10 @@
 	</div>
 
 	<!-- Scripts -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-	<script src="js/vendor/plugins.js"></script>
-	<script src="../js/sly.min.js"></script>
-	<script src="js/horizontal.js"></script>
+	<script src="js/testing/jquery.js"></script>
+	<script src="js/testing/plugins.js"></script>
+	<script src="js/testing/sly.js"></script>
+	<script src="js/testing/horizontal.js"></script>
 
 	<!-- Google Analytics -->
 	<script>
