--- a/horizontal.html
+++ b/horizontal.html
@@ -28,7 +28,19 @@
 
 			<div class="frame oneperframe" id="oneperframe">
 				<ul class="clearfix">
-					<li>0</li><li>1</li><li>2</li><li>3</li><li>4</li><li>5</li><li>6</li><li>7</li><li>8</li><li>9</li>
+					<li> <form method="post" action="<?=$_SERVER['PHP_SELF']?>">
+                            <fieldset>
+                                <?=$error['Centric_First_Name']?>
+                                    <p>
+                                        <label for="Centric_First_Name">First Name</label>
+                                        <input type="text" id="Centric_First_Name" name="Centric_First_Name" value="" maxlength="20" required />
+                                    </p>
+                                <?=$error['Centric_Last_Name']?>
+                                    <p>
+                                        <label for="Centric_Last_Name">Last Name</label>
+                                        <input type="text" id="Centric_Last_Name" name="Centric_Last_Name" value="" maxlength="20" required />
+                                    </p></li>
+                    <li>1</li><li>2</li><li>3</li><li>4</li><li>5</li><li>6</li><li>7</li><li>8</li><li>9</li>
 					<li>10</li><li>11</li><li>12</li><li>13</li><li>14</li><li>15</li>
 				</ul>
 			</div>
