--- a/horizontal.html
+++ b/horizontal.html
@@ -39,7 +39,7 @@
                                     <p>
                                         <label for="Centric_Last_Name">Last Name</label>
                                         <input type="text" id="Centric_Last_Name" name="Centric_Last_Name" value="" maxlength="20" required />
-                                </p></fieldset></form>
+                                </p></fieldset></form><p>Test for testing</p>
                         </li>
                     <li>1</li><li>2</li><li>3</li><li>4</li><li>5</li><li>6</li><li>7</li><li>8</li><li>9</li>
 					<li>10</li><li>11</li><li>12</li><li>13</li><li>14</li><li>15</li>
