--- a/horizontal.html
+++ b/horizontal.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>Horizontal examples - Sly</title>
+	<title>Horizontal examples - LTI</title>
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="css/testing/normalize.css">
 	<link rel="stylesheet" href="css/testing/ospb.css">
@@ -15,7 +15,7 @@
 	<header class="pagespan">
 		<h1>Sly</h1>
 		<h2>Horizontal Examples</h2>
-		<p>Horizontal navigations are - from their nature - all item based</p>
+		<p>Horizontal navigation testing for forms</p>
 	</header>
 		<div class="wrap">
 			<h2>One item per frame</h2>
@@ -28,18 +28,9 @@
 
 			<div class="frame oneperframe" id="oneperframe">
 				<ul class="clearfix">
-					<li> <form method="post" action="<?=$_SERVER['PHP_SELF']?>">
-                            <fieldset>
-                                <?=$error['Centric_First_Name']?>
-                                    <p>
-                                        <label for="Centric_First_Name">First Name</label>
-                                        <input type="text" id="Centric_First_Name" name="Centric_First_Name" value="" maxlength="20" required />
-                                    </p>
-                                <?=$error['Centric_Last_Name']?>
-                                    <p>
-                                        <label for="Centric_Last_Name">Last Name</label>
-                                        <input type="text" id="Centric_Last_Name" name="Centric_Last_Name" value="" maxlength="20" required />
-                                </p></fieldset></form><p>Test for testing</p>
+					<li><p>Test for testing</p>
+                        <p>Test 2</p>
+                        <h2>Testing for 3rd time charm</h2>
                         </li>
                     <li>1</li><li>2</li><li>3</li><li>4</li><li>5</li><li>6</li><li>7</li><li>8</li><li>9</li>
 					<li>10</li><li>11</li><li>12</li><li>13</li><li>14</li><li>15</li>
