--- a/horizontal.html
+++ b/horizontal.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<header class="pagespan">
-		<h1>Sly</h1>
+		<h1>LTI</h1>
 		<h2>Horizontal Examples</h2>
 		<p>Horizontal navigation testing for forms</p>
 	</header>
