--- a/horizontal.html
+++ b/horizontal.html
@@ -28,9 +28,12 @@
 
 			<div class="frame oneperframe" id="oneperframe">
 				<ul class="clearfix">
-					<li><p>Test for testing</p>
-                        <p>Test 2</p>
-                        <h2>Testing for 3rd time charm</h2>
+					<li><p>
+                        <form method="post" action="post.php">
+                        <label for="Centric_First_Name">First Name</label>
+                        <input type="text" id="Centric_First_Name" name="Centric_First_Name" value="" maxlength="20" required />
+                        </form>
+                        </p>
                         </li>
                     <li>1</li><li>2</li><li>3</li><li>4</li><li>5</li><li>6</li><li>7</li><li>8</li><li>9</li>
 					<li>10</li><li>11</li><li>12</li><li>13</li><li>14</li><li>15</li>
